--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <head>
    <title>Web Page</title>
    <meta content="width-device-width, initial-scale=1" name="viewport">
+   <meta content="#1bbc9b" name="theme-color">
    <link rel="stylesheet" href="css/main.css">
  </head>
  <body>
