--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <div class="site-header-content">
          <h1>Hi, I am Saddam Shah, I am 21 years old, living in Navi Mumbai, india</h1>
          <h3>I am learning full stack development. Watch this space for my upcoming projects.</h3>
-         <h5>If you want to learn  with me join me at this course.</h5>
+         <h5>If you want to learn coding with me join me at this course.</h5>
        </div>
     </header>
  </body>
